# maturin-ci-test

./: Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
