[package]
name = "ci-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ci_test"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
rquickjs-core = { version = "0.10", git = "https://github.com/DelSkayn/rquickjs" , features = ["bindgen"]}
